objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp;&quot; &quot;&amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Auto_ETA_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will enable automatic ETA notifications to be sent to the customer within an FSL process</inlineHelpText>
        <label>Allow Auto. ETA Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Auto_Status_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will enable automatic Status notifications to be sent to the customer within an FSL process</inlineHelpText>
        <label>Allow Auto. Status Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <label>Contract Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Posted_Margin__c</fullName>
        <formula>IF( Contract_Posted_Value__c =0,0,( Contract_Posted_Value__c -( Engineering_Pricing_Cost_Posted__c +  Pass_Through_Pricing_Cost_Posted__c ))/Contract_Posted_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Posted Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Posted_Value__c</fullName>
        <formula>Engineering_Pricing_Revenue_Posted__c +  Pass_Through_Pricing_Revenue_Posted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Posted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Unposted_Margin__c</fullName>
        <formula>IF(Contract_Unposted_Value__c=0,0,((Contract_Unposted_Value__c-( Engineering_Pricing_Cost_Unposted__c  +  Pass_Through_Pricing_Cost_Unposted__c ))/Contract_Unposted_Value__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Unposted Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Unposted_Value__c</fullName>
        <formula>IF( Engineering_Pricing_Revenue_Unposted__c =0,0,(Engineering_Pricing_Revenue_Unposted__c+ Pass_Through_Pricing_Revenue_Unposted__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Unposted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Total_Cost_value__c</fullName>
        <label>Current &apos;Total Cost&apos; value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Cost_Posted__c</fullName>
        <label>Engineering Cost Posted</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Cost_Unposted__c</fullName>
        <label>Engineering Cost Unposted</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Margin__c</fullName>
        <formula>IF(Engineering_Pricing_Total_Revenue__c=0,0,( Engineering_Pricing_Total_Revenue__c  -  Engineering_Pricing_Total_Cost__c )/ Engineering_Pricing_Total_Revenue__c)</formula>
        <label>Engineering Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Revenue_Posted__c</fullName>
        <label>Engineering Revenue Posted</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Revenue_Unposted__c</fullName>
        <label>Engineering Revenue Unposted</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Total_Cost__c</fullName>
        <formula>Engineering_Pricing_Cost_Posted__c   +   Engineering_Pricing_Cost_Unposted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Engineering_Pricing_Total_Revenue__c</fullName>
        <formula>Engineering_Pricing_Revenue_Posted__c   +   Engineering_Pricing_Revenue_Unposted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Contract__c</fullName>
        <label>Global Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Cost__c</fullName>
        <formula>Engineering_Pricing_Total_Cost__c  +  Pass_Through_Pricing_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <formula>Engineering_Pricing_Total_Revenue__c +  Pass_Through_Pricing_Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Original_Value__c</fullName>
        <label>PO Original Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Cost_Posted__c</fullName>
        <label>Pass Through Cost Posted</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Cost_Unposted__c</fullName>
        <label>Pass Through Cost Unposted</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Margin__c</fullName>
        <formula>IF( Pass_Through_Pricing_Total_Revenue__c=0,0,( Pass_Through_Pricing_Total_Revenue__c  -  Pass_Through_Pricing_Total_Cost__c )/ Pass_Through_Pricing_Total_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Through Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Revenue_Posted__c</fullName>
        <label>Pass Through Revenue Posted</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Revenue_Unposted__c</fullName>
        <label>Pass Through Revenue Unposted</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Usage_FSL__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Usage_FSL__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Total_Cost__c</fullName>
        <formula>Pass_Through_Pricing_Cost_Posted__c  +  Pass_Through_Pricing_Cost_Unposted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Through Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Pricing_Total_Revenue__c</fullName>
        <formula>Pass_Through_Pricing_Revenue_Posted__c   +   Pass_Through_Pricing_Revenue_Unposted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Through Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLA_Count__c</fullName>
        <label>SLA Count</label>
        <summaryForeignKey>SLA__c.Service_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Notes__c</fullName>
        <label>Service Contract Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sold_Engineering_Margin__c</fullName>
        <label>Sold Engineering Margin</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sold_Margin__c</fullName>
        <label>Sold Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Instructions__c</fullName>
        <description>Will populate WO standard instructions</description>
        <label>Standard Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WO_Contact_Email__c</fullName>
        <label>WO Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Weeks_To_Renewal__c</fullName>
        <formula>(EndDate - TODAY())/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks To Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>